--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,27 @@
 [versions]
 # Android & Kotlin Core
 agp = "8.13.2"
-kotlin = "2.2.0"
+kotlin = "2.3.0"
 coreKtx = "1.17.0"
 coreSplashscreen = "1.2.0"
 desugar_jdk_libs = "2.1.5"
 
 # Compose & Lifecycle
-composeBom = "2025.12.00"
-activityCompose = "1.12.1"
+composeBom = "2026.01.00"
+activityCompose = "1.12.2"
 lifecycleRuntimeKtx = "2.10.0"
 navigationCompose = "2.9.6"
 
 # UI Resources (Material, Fonts, Coil)
 appcompat = "1.7.1"
 material = "1.13.0"
-uiTextGoogleFonts = "1.10.0"
+uiTextGoogleFonts = "1.10.1"
 materialIconsExtended = "1.7.8"
 coil = "2.7.0"
+advanced-bottomsheet = "0.1.0"
 
 # Dependency Injection (Hilt & KSP)
-hilt = "2.57.2"
+hilt = "2.58"
 hiltNavigationCompose = "1.3.0"
 ksp = "2.2.0-2.0.2"
 
@@ -28,24 +29,24 @@ ksp = "2.2.0-2.0.2"
 retrofit = "3.0.0"
 converterMoshi = "3.0.0"
 moshiKotlin = "1.15.2"
-v2User = "2.22.0"
+v2User = "2.23.2"
 
 # Google Maps & Location
-mapsCompose = "6.12.1"
-playServicesMaps = "19.2.0"
+mapsCompose = "7.0.0"
+playServicesMaps = "20.0.0"
 playServicesLocation = "21.3.0"
 secretsGradlePlugin = "2.0.1"
 
 # Firebase & Services
-firebaseBom = "33.7.0"
+firebaseBom = "34.8.0"
 googleGmsServices = "4.4.4"
-coroutinesPlayServices = "1.7.3"
+coroutinesPlayServices = "1.10.2"
 
 # Test
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
-ui = "1.10.0"
+ui = "1.10.1"
 
 
 [libraries]
@@ -74,6 +75,7 @@ androidx-compose-material-icons-extended = { group = "androidx.compose.material"
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+advanced-bottomsheet = { group = "io.morfly.compose", name = "advanced-bottomsheet-material3", version.ref = "advanced-bottomsheet" }
 
 # Dependency Injection (Hilt)
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
